--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev:vite": "vite",
+    "dev:tailwind": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "dev": "concurrently \"npm run dev:tailwind\" \"npm run dev:vite\"",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "concurrently": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
